--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,25 @@
-body {
-  padding: 50px;
-  font: 10px "Lucida Grande", Helvetica, Arial, sans-serif; }
+@font-face {
+  font-family: 'FontAwesome';
+  src: url("fonts/fontawesome-webfont.woff2") format("woff2");
+  src: url("fonts/fontawesome-webfont.woff") format("woff");
+  src: url("fonts/fontawesome-webfont.ttf") format("truetype"); }
 
-a {
-  color: #00B7FF; }
+body {
+  color: #484c55;
+  font-family: FontAwesome, Helvetica, sans-serif; }
+
+.header {
+  height: 100px;
+  background: #0095FF;
+  background: -webkit-linear-gradient(rgba(16, 19, 20, 0.29), #0095FF);
+  background: -o-linear-gradient(rgba(16, 19, 20, 0.29), #0095FF);
+  background: -moz-linear-gradient(rgba(16, 19, 20, 0.29), #0095FF);
+  background: linear-gradient(rgba(16, 19, 20, 0.29), #0095FF); }
+  .header #logo {
+    position: relative;
+    float: left;
+    margin-left: 10%;
+    margin-top: 10px;
+    height: 50px; }
 
 /*# sourceMappingURL=style.css.map */
