--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,21 +5,15 @@
   src: url("fonts/fontawesome-webfont.ttf") format("truetype"); }
 
 body {
+  background: linear-gradient(#0075a9, #880A6C) fixed;
   color: #484c55;
   font-family: FontAwesome, Helvetica, sans-serif; }
 
 .header {
-  height: 100px;
-  background: #0095FF;
-  background: -webkit-linear-gradient(rgba(16, 19, 20, 0.29), #0095FF);
-  background: -o-linear-gradient(rgba(16, 19, 20, 0.29), #0095FF);
-  background: -moz-linear-gradient(rgba(16, 19, 20, 0.29), #0095FF);
-  background: linear-gradient(rgba(16, 19, 20, 0.29), #0095FF); }
+  height: 100px; }
   .header #logo {
-    position: relative;
-    float: left;
     margin-left: 10%;
-    margin-top: 10px;
+    margin-top: 20px;
     height: 50px; }
 
 /*# sourceMappingURL=style.css.map */
