--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -1,4 +1,5 @@
 $primary-color: #484c55
+$logo-color: #F2E278
 $primary-font: FontAwesome, Helvetica, sans-serif
 
 @font-face
@@ -8,19 +9,13 @@ $primary-font: FontAwesome, Helvetica, sans-serif
   src: url('fonts/fontawesome-webfont.ttf') format('truetype')
 
 body
+  background: linear-gradient(rgba(0,117,169,1), #880A6C) fixed
   color: $primary-color
   font-family: $primary-font
 
 .header
   height: 100px
-  background: #0095FF /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(rgba(16,19,20,0.29), #0095FF) /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(rgba(16,19,20,0.29), #0095FF) /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(rgba(16,19,20,0.29), #0095FF) /* For Firefox 3.6 to 15 */
-  background: linear-gradient(rgba(16,19,20,0.29), #0095FF) /* Standard syntax */
   #logo
-    position: relative
-    float: left
     margin-left: 10%
-    margin-top: 10px
+    margin-top: 20px
     height: 50px
