--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,16 +4,71 @@
   src: url("fonts/fontawesome-webfont.woff") format("woff");
   src: url("fonts/fontawesome-webfont.ttf") format("truetype"); }
 
+html, body {
+  height: 100%; }
+
 body {
   background: linear-gradient(#0075a9, #880A6C) fixed;
-  color: #484c55;
-  font-family: FontAwesome, Helvetica, sans-serif; }
+  color: #ffffff;
+  font-family: FontAwesome, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: column; }
 
-.header {
-  height: 100px; }
-  .header #logo {
-    margin-left: 10%;
-    margin-top: 20px;
-    height: 50px; }
+a {
+  color: inherit; }
+
+a:hover {
+  color: inherit;
+  text-decoration: none;
+  padding-bottom: 2px;
+  border-bottom: 2px solid; }
+
+nav {
+  margin-top: 3rem;
+  height: 70px; }
+  nav .logo {
+    position: relative;
+    height: 40px;
+    top: 50%;
+    transform: translateY(-50%);
+    float: left; }
+  nav ul.left {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    display: inline;
+    float: left; }
+    nav ul.left li {
+      list-style: none;
+      text-align: center;
+      color: #F2E278;
+      display: inline-block;
+      padding-left: 40px; }
+  nav ul.right {
+    float: right;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    border: 1px solid #F2E278;
+    border-radius: 3px;
+    padding: 10px;
+    margin-bottom: 0px; }
+    nav ul.right li {
+      list-style: none;
+      text-align: center;
+      color: #F2E278; }
+
+main {
+  margin-top: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: rgba(255, 255, 255, 0.2);
+  flex: 1; }
+
+footer {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 12px; }
 
 /*# sourceMappingURL=style.css.map */
