--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -1,4 +1,4 @@
-$primary-color: #484c55
+$primary-color: #ffffff
 $logo-color: #F2E278
 $primary-font: FontAwesome, Helvetica, sans-serif
 
@@ -8,14 +8,66 @@ $primary-font: FontAwesome, Helvetica, sans-serif
   src: url('fonts/fontawesome-webfont.woff') format('woff')
   src: url('fonts/fontawesome-webfont.ttf') format('truetype')
 
+html, body
+  height: 100%
+
 body
   background: linear-gradient(rgba(0,117,169,1), #880A6C) fixed
   color: $primary-color
   font-family: $primary-font
+  display: flex
+  flex-direction: column
 
-.header
-  height: 100px
-  #logo
-    margin-left: 10%
-    margin-top: 20px
-    height: 50px
+a
+  color: inherit
+a:hover
+  color: inherit
+  text-decoration: none
+  padding-bottom: 2px
+  border-bottom: 2px solid
+nav
+  margin-top: 3rem
+  height: 70px
+  .logo
+    position: relative
+    height: 40px
+    top: 50%
+    transform: translateY(-50%)
+    float: left
+  ul.left
+    position: relative
+    top: 50%
+    transform: translateY(-50%)
+    display: inline
+    float: left
+    li
+      list-style: none
+      text-align: center
+      color: $logo-color
+      display: inline-block
+      padding-left: 40px
+  ul.right
+    float: right
+    position: relative
+    top: 50%
+    transform: translateY(-50%)
+    border: 1px solid $logo-color
+    border-radius: 3px
+    padding: 10px
+    margin-bottom: 0px
+    li
+      list-style: none
+      text-align: center
+      color: $logo-color
+main
+  margin-top: 30px
+  padding-top: 30px
+  padding-bottom: 30px
+  background-color: rgba(255,255,255,0.2)
+  flex: 1
+
+footer
+  margin-top: 20px
+  margin-bottom: 20px
+  color: rgba(255,255,255,.7)
+  font-size: 12px
