--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,18 +6,46 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
 
+  <title>AdCall Home</title>
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
   <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 <body>
+<header>
+  <div class="container">
+    <nav>
 
+      <a href="/" title="Take me home">
+        <img class="logo" src="images/logo.png">
+      </a>
 
-<div class="header">
-  <a href="/" title="Take me home">
-    <img src="images/logo.png" id="logo">
-  </a>
-</div>
+      <ul class="left">
+        <li><a href="how">How it works</a></li>
+        <li><a href="how">Contacts</a></li>
+      </ul>
+
+      <ul class="right">
+        <li><a href="login">Log In</a></li>
+        <li><a href="signup">Sign In</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
+
+<main>
+  <div class="container">
+    dasdasd
+  </div>
+
+</main>
+
+<footer>
+  <div class="container">
+    &copy; MMXVI Marco Greselin
+  </div>
+</footer>
 
 
 <!-- jQuery first, then Bootstrap JS. -->
