--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -9,7 +9,7 @@ $primary-font: FontAwesome, Helvetica, sans-serif
   src: url('fonts/fontawesome-webfont.ttf') format('truetype')
 
 html, body
-  height: 100%
+  //height: 100%
 
 body
   background: linear-gradient(rgba(0,117,169,1), #880A6C) fixed
@@ -64,7 +64,13 @@ main
   padding-top: 30px
   padding-bottom: 30px
   background-color: rgba(255,255,255,0.2)
-  flex: 1
+.home
+  align-items: center
+  img
+    width: 80%
+
+
+
 
 footer
   margin-top: 20px
