--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,22 @@
 
 <main>
   <div class="container">
-    dasdasd
+    <div class="row">
+      <div class="col-md-5">
+        <div class="home">
+          <img  src="images/home.png" alt="">
+        </div>
+      </div>
+      <div class="col-md-7">
+        <h1>Receive calls from online banners with AdCall</h1>
+        <p>AdCall are the next generation of advertising banner. When users click on them they are not redirected to
+        a website. Insted they start an in-browser in-banner video with you.</p>
+        <p>This allows advertisers to have a more direct way of talking to potential customers leading to higher
+        conversions, lower acquisition costs and more happiness.</p>
+        <p>Publishers love AdCall too because our CPM is higher than any other ad media.</p>
+        <p>Users can get answers to their questions fast instead of browsing website. So yes, they love AdCall too!</p>
+      </div>
+    </div>
   </div>
 
 </main>
