--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
 
       <ul class="right">
         <li><a href="login">Log In</a></li>
-        <li><a href="signup">Sign In</a></li>
+        <li><a href="signup">Sign Up</a></li>
       </ul>
     </nav>
   </div>
