--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,31 +12,27 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
   <link rel="stylesheet" href="stylesheets/style.css">
 </head>
-<body>
+<body class="login-page">
 <header>
   <div class="container">
-    <nav>
-
-      <a href="/" title="Take me home">
-        <img class="logo" src="images/logo.png">
-      </a>
-
-      <ul class="left">
-        <li><a href="how">How it works</a></li>
-        <li><a href="how">Contacts</a></li>
-      </ul>
-
-      <ul class="right">
-        <li><a href="login">Log In</a></li>
-        <li><a href="signup">Sign In</a></li>
-      </ul>
-    </nav>
+    <a href="/" title="Take me home">
+      <img class="logo" src="images/logo.png">
+    </a>
+    <p>
+      <h1>Log In</h1>
+    </p>
   </div>
 </header>
 
 <main>
 
-
+  <form>
+    <div class="container login-page">
+      <p><input type="text" placeholder="email"></p>
+      <p><input type="password" placeholder="password"></p>
+      <button>Enter!</button>
+    </div>
+  </form>
 
 </main>
 
