--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -112,11 +112,18 @@ footer {
   .login-page a {
     border: none; }
   .login-page img {
-    height: 100px;
+    height: 70px;
     margin-top: 60px;
     margin-bottom: 60px;
     display: block;
     margin-left: auto;
     margin-right: auto; }
+
+.signup-page select {
+  background-color: white;
+  border: 7px solid white;
+  border-radius: 4px;
+  color: black;
+  margin-left: 10px; }
 
 /*# sourceMappingURL=style.css.map */
