--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -17,7 +17,6 @@ body
   font-family: $primary-font
   display: flex
   flex-direction: column
-
 a
   color: inherit
 a:hover
@@ -117,9 +116,16 @@ footer
   a
     border: none
   img
-    height: 100px
+    height: 70px
     margin-top: 60px
     margin-bottom: 60px
     display: block
     margin-left: auto
     margin-right: auto
+.signup-page
+  select
+    background-color: white
+    border: 7px solid white
+    border-radius: 4px
+    color: black
+    margin-left: 10px
