--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>AdCall Login</title>
+    <title>Sign Up</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
@@ -19,18 +19,22 @@
             <img class="logo" src="images/logo.png">
         </a>
         <p>
-        <h1>Log In</h1>
+        <h1>Sign Up</h1>
         </p>
     </div>
 </header>
 
-<main>
+<main class="signup-page">
 
     <form>
         <div class="container login-page">
-            <p><input type="text" placeholder="email"></p>
-            <p><input type="password" placeholder="password"></p>
-            <button>Enter!</button>
+            <p>What Account do you need:</p>
+            <p><select onChange="document.location = this.value">
+                <option value="" disabled selected>Make a choice</option>
+                <option value="signup/advertiser">Advertiser</option>
+                <option value="signup//publisher">Publisher</option>
+            </select></p>
+            <!--<button>Next</button>-->
         </div>
     </form>
 
