--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -32,7 +32,7 @@
             <p><select onChange="document.location = this.value">
                 <option value="" disabled selected>Make a choice</option>
                 <option value="signup/advertiser">Advertiser</option>
-                <option value="signup//publisher">Publisher</option>
+                <option value="signup/publisher">Publisher</option>
             </select></p>
             <!--<button>Next</button>-->
         </div>
