--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -113,8 +113,6 @@ footer
   button:hover
     background-color: white
     color: #000
-  a
-    border: none
   img
     height: 70px
     margin-top: 60px
@@ -129,3 +127,47 @@ footer
     border-radius: 4px
     color: black
     margin-left: 10px
+.registration-page
+  font-size: 1.2rem
+  padding: 20px
+  text-align: center
+  main
+    border-radius: 3px
+    width: 800px
+    margin-left: auto
+    margin-right: auto
+    padding-left: 20px
+    padding-right: 20px
+    padding-top: 30px
+    padding-bottom: 30px
+  .row
+    margin: 5px
+    display: flex
+    align-items: center
+  .col-md-4
+    padding: 0px
+  input
+    border: 3px solid white
+    border-radius: 4px
+    color: black
+
+    //margin-left: 10px
+    //padding-left: 8px
+    width: 100%
+  button
+    border: 3px solid white
+    border-radius: 4px
+    color: white
+    background-color: transparent
+    transition: background-color 0.1s ease
+    margin-top: 20px
+  button:hover
+    background-color: white
+    color: #000
+  img
+    height: 70px
+    margin-top: 60px
+    margin-bottom: 60px
+    display: block
+    margin-left: auto
+    margin-right: auto
