--- a/views/signup-publisher.ejs
+++ b/views/signup-publisher.ejs
@@ -6,32 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>AdCall Login</title>
+    <title>Sign Up</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
-    <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="../stylesheets/style.css">
 </head>
 <body class="login-page">
 <header>
     <div class="container">
         <a href="/" title="Take me home">
-            <img class="logo" src="images/logo.png">
+            <img class="logo" src="../images/logo.png">
         </a>
         <p>
-        <h1>Log In</h1>
+        <h1>Sign Up</h1>
         </p>
     </div>
 </header>
 
-<main>
+<main class="signup-page">
 
     <form>
         <div class="container login-page">
-            <p><input type="text" placeholder="email"></p>
-            <p><input type="password" placeholder="password"></p>
-            <p><button>Enter!</button></p>
-            <a href="/signup"><h6>Don't have an account?</h6></a>
+            <p>What Account do you need:</p>
+            <p><select onChange="document.location = this.value">
+                <option value="" disabled selected>Make a choice</option>
+                <option value="signup/advertiser">Advertiser</option>
+                <option value="signup//publisher">Publisher</option>
+            </select></p>
+            <!--<button>Next</button>-->
         </div>
     </form>
 
