--- a/public/stylesheets/style-loggedin.sass
+++ b/public/stylesheets/style-loggedin.sass
@@ -1,19 +1,18 @@
-$primary-color: #ffffff
-$logo-color: #F2E278
+$primary-color: black
+$logo-color: #50E3C2
 $primary-font: FontAwesome, Helvetica, sans-serif
 
 @font-face
   font-family: 'FontAwesome'
   src: url('fonts/Asap-Regular.otf') format('opentype')
 body
-  background: linear-gradient(rgba(0,117,169,1), #880A6C) fixed
+  background: linear-gradient(white, #FFFFE4) fixed
   color: $primary-color
   font-family: $primary-font
   display: flex
   flex-direction: column
 a
   color: inherit
-
 a:hover
   color: inherit
   text-decoration: none
