--- a/views/console/index.ejs
+++ b/views/console/index.ejs
@@ -22,13 +22,13 @@
             </a>
 
             <ul class="left">
-                <li><a href="how.html">How it works</a></li>
-                <li><a href="mailto:marcogreselin@me.com">Contacts</a></li>
+                <li><a href="how.html">Create an ad</a></li>
+                <li><a href="mailto:marcogreselin@me.com">Analytics</a></li>
             </ul>
 
             <ul class="right">
-                <li><a href="login">Log In</a></li>
-                <li><a href="signup">Sign Up</a></li>
+                <li>Welcome Marco</li>
+                <li><a href="../">Logout</a></li>
             </ul>
         </nav>
     </div>
@@ -37,19 +37,10 @@
 <main>
     <div class="container">
         <div class="row">
-            <div class="col-md-5">
-                <div class="home">
-                    <img  src="images/home.png" alt="">
-                </div>
-            </div>
-            <div class="col-md-7">
-                <h1>Receive calls from online banners with AdCall</h1>
-                <p>AdCall are the next generation of advertising banner. When users click on them they are not redirected to
-                    a website. Insted they start an in-browser in-banner video with you.</p>
-                <p>This allows advertisers to have a more direct way of talking to potential customers leading to higher
-                    conversions, lower acquisition costs and more happiness.</p>
-                <p>Publishers love AdCall too because our CPM is higher than any other ad media.</p>
-                <p>Users can get answers to their questions fast instead of browsing website. So yes, they love AdCall too!</p>
+
+            <div class="col-md-12">
+                <h1>Hola Marco, this is your console</h1>
+
             </div>
         </div>
     </div>
