--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,7 +30,7 @@
         <div class="container login-page">
             <p><input type="text" placeholder="email"></p>
             <p><input type="password" placeholder="password"></p>
-            <p><button>Enter!</button></p>
+            <p><button type="submit" formaction="/console">Enter!</button></p>
             <a href="/signup"><h6>Don't have an account?</h6></a>
         </div>
     </form>
