--- a/views/signup-advertiser.ejs
+++ b/views/signup-advertiser.ejs
@@ -69,7 +69,7 @@
                     </div>
                 </div>
             </div>
-            <button formaction="http://console.adcall.io">Sign Up!</button>
+            <button formaction="/console">Sign Up!</button>
         </form>
     </div>
 
