--- a/public/stylesheets/style-loggedin.sass
+++ b/public/stylesheets/style-loggedin.sass
@@ -80,3 +80,15 @@ footer
   color: $primary-color
   font-size: 12px
   text-align: left!important
+
+
+.console-home
+  .menu-box
+    display: inline-block
+    border-radius: 3px
+    padding: 10px
+    margin: 0 auto
+    text-align: center
+    min-height: 50px
+    background: linear-gradient(rgba(0,117,169,1), #880A6C)
+    color: white
