--- a/public/stylesheets/style-loggedin.css
+++ b/public/stylesheets/style-loggedin.css
@@ -83,4 +83,14 @@ footer {
   font-size: 12px;
   text-align: left !important; }
 
+.console-home .menu-box {
+  display: inline-block;
+  border-radius: 3px;
+  padding: 10px;
+  margin: 0 auto;
+  text-align: center;
+  min-height: 50px;
+  background: linear-gradient(#0075a9, #880A6C);
+  color: white; }
+
 /*# sourceMappingURL=style-loggedin.css.map */
