--- a/views/console/snippet.ejs
+++ b/views/console/snippet.ejs
@@ -10,12 +10,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
-    <link rel="stylesheet" href="stylesheets/style-loggedin.css">
+    <link rel="stylesheet" href="../stylesheets/style-loggedin.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.bundle.js"></script>
 
 </head>
 <body>
-
 <% include partials/header.ejs %>
 
 <main>
@@ -24,19 +23,9 @@
         <div class="menu-box">
             Start answering calls!
         </div>
-        <div class="row">
-            <div class="col-md-6">
-                <div id="console-chart">
-                    <canvas id="chart" ></canvas>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div id="console-chart">
-                    <canvas id="chart2" ></canvas>
-                </div>
-            </div>
+        <div id="console-chart">
+            <canvas id="chart2" ></canvas>
         </div>
-
         <script>
             var ctx = document.getElementById('chart');
             var myChart = new Chart(ctx, {
@@ -76,11 +65,10 @@
                 }
             });
         </script>
-
         <script>
             var ctx = document.getElementById('chart2');
             var myChart = new Chart(ctx, {
-                type: 'bar',
+                type: 'line',
                 data: {
                     labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
                     datasets: [{
