--- a/views/console/my-ads.ejs
+++ b/views/console/my-ads.ejs
@@ -11,21 +11,25 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
     <link rel="stylesheet" href="../stylesheets/style-loggedin.css">
+    <!-- Jasny -->
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/css/jasny-bootstrap.min.css">
 </head>
 <body>
 <% include partials/header.ejs %>
 
 <main>
     <div class="container">
-        <div class="row">
+        <h1>Create a new Ad</h1>
+        <p>For now, each account can only support one ad. In the future, you will be able to add multiple ads to your account.</p>
 
-            <div class="col-md-12">
-                <h1>Create magic</h1>
-
-                <h1>First: Select an image</h1>
-
-            </div>
+        <div class="menu-box">
+            Add an image
         </div>
+
+        <br>
+        <img style="margin-top: 30px;" src="../images/ads/first.png" alt="">
+
+
     </div>
 
 </main>
@@ -40,5 +44,7 @@
 <!-- jQuery first, then Bootstrap JS. -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
+<!-- Jasny -->
+<script src="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/js/jasny-bootstrap.min.js"></script>
 </body>
 </html>
