--- a/public/stylesheets/style-loggedin.sass
+++ b/public/stylesheets/style-loggedin.sass
@@ -71,17 +71,12 @@ main
   align-items: center
   img
     width: 80%
-
-
-
 footer
   margin-top: 20px
   margin-bottom: 20px
   color: $primary-color
   font-size: 12px
   text-align: left!important
-
-
 .console-home
   .menu-box
     display: inline-block
@@ -92,3 +87,47 @@ footer
     min-height: 50px
     background: linear-gradient(rgba(0,117,169,1), #880A6C)
     color: white
+textarea#snippet
+  display: block
+  width: 500px
+  height: 250px
+  border: 1px solid #880A6C
+  border-radius: 3px
+  margin-left: auto
+  margin-right: auto
+  margin-top: 30px
+  padding: 10px
+h1
+  margin-bottom: 40px
+.menu-box
+  display: inline-block
+  border-radius: 3px
+  padding: 10px
+  margin: 0 auto
+  text-align: center
+  min-height: 50px
+  background: linear-gradient(rgba(0,117,169,1), #880A6C)
+  color: white
+.answer-video
+  height: 400px
+video
+  display: block
+  margin-left: auto
+  margin-right: auto
+  position: relative
+  height: 100%
+.center-container
+  display: block
+  margin-left: auto
+  margin-right: auto
+  position: relative
+  height: 100%
+table
+
+  td
+    padding: 5px
+  th
+    padding: 5px
+    background-color: rgba(0,117,169,.5)
+    border-top-left-radius: 3px
+    border-top-right-radius: 3px
