--- a/views/console/answer.ejs
+++ b/views/console/answer.ejs
@@ -20,9 +20,17 @@
         <div class="row">
 
             <div class="col-md-12">
-                <h1>Create magic</h1>
+                <h1>Answer Calls</h1>
 
-                <h1>First: Select an image</h1>
+                <div class="center-container">
+                    <div class="menu-box">
+                        Start answering calls!
+                    </div>
+                </div>
+
+                <div class="answer-video">
+                    <video autoplay="true" id="videoElement"></video>
+                </div>
 
             </div>
         </div>
@@ -40,5 +48,22 @@
 <!-- jQuery first, then Bootstrap JS. -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
+<script>
+    var video = document.querySelector("#videoElement");
+
+    navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia || navigator.msGetUserMedia || navigator.oGetUserMedia;
+
+    if (navigator.getUserMedia) {
+        navigator.getUserMedia({video: true}, handleVideo, videoError);
+    }
+
+    function handleVideo(stream) {
+        video.src = window.URL.createObjectURL(stream);
+    }
+
+    function videoError(e) {
+        // do something
+    }
+</script>
 </body>
 </html>
