--- a/src/views/signup-advertiser.ejs
+++ b/src/views/signup-advertiser.ejs
@@ -26,7 +26,7 @@
 
 <main>
     <div class="registration-mask">
-        <form>
+        <form name="signup-advertiser" method="post" action="/auth/signup">
             <div class="row">
                 <div class="col-md-6">
                     <div class="row">
@@ -69,7 +69,7 @@
                     </div>
                 </div>
             </div>
-            <button formaction="/console">Sign Up!</button>
+            <button>Sign Up!</button>
         </form>
     </div>
 
