--- a/src/views/signup-advertiser.ejs
+++ b/src/views/signup-advertiser.ejs
@@ -31,7 +31,7 @@
                 <div class="col-md-6">
                     <div class="row">
                         <div class="col-md-4">Company Name</div>
-                        <div class="col-md-8"><input type="text"></div>
+                        <div class="col-md-8"><input type="text" name="company"></div>
                     </div>
                 </div>
                 <div class="col-md-6">
