--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -126,9 +126,11 @@ footer
   font-size: 1.2rem
   padding: 20px
   text-align: center
+  .left
+    text-align: right
   main
     border-radius: 3px
-    width: 800px
+    width: 600px
     margin-left: auto
     margin-right: auto
     padding-left: 20px
@@ -139,23 +141,23 @@ footer
     margin: 5px
     display: flex
     align-items: center
+    height: 50px
   .col-md-4
     padding: 0px
   input
     border: 3px solid white
     border-radius: 4px
     color: black
-
-    //margin-left: 10px
-    //padding-left: 8px
     width: 100%
+    padding-left: 5px
+
   button
     border: 3px solid white
     border-radius: 4px
     color: white
     background-color: transparent
     transition: background-color 0.1s ease
-    margin-top: 20px
+    margin-top: 15px
   button:hover
     background-color: white
     color: #000
