--- a/src/views/signup-advertiser.ejs
+++ b/src/views/signup-advertiser.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>Advertisers Sign Up</title>
+    <title>Sign Up</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
@@ -19,72 +19,82 @@
             <img class="logo" src="../images/logo.png">
         </a>
         <p>
-        <h1>Advertisers Sign Up</h1>
+        <h1>Sign Up Form</h1>
         </p>
     </div>
 </header>
 
 <main>
     <div class="registration-mask">
-        <form name="signup-advertiser" method="post" action="/auth/signup">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="row">
-                        <div class="col-md-4">Company Name</div>
-                        <div class="col-md-8"><input type="text" name="company"></div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="row">
-                        <div class="col-md-4">Website</div>
-                        <div class="col-md-8"><input type="text"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="row">
-                        <div class="col-md-4">email address</div>
-                        <div class="col-md-8"><input type="text"></div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="row">
-                        <div class="col-md-4">Password</div>
-                        <div class="col-md-8"><input type="password"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="row">
-                        <div class="col-md-4">Address</div>
-                        <div class="col-md-8"><input type="text"></div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="row">
-                        <div class="col-md-4">Phone Number</div>
-                        <div class="col-md-8"><input type="text"></div>
-                    </div>
-                </div>
-            </div>
-            <button>Sign Up!</button>
+        <form name="signup-advertiser" id="signup-form">
+            <!--method="post" action="/auth/signup"-->
+
+            <div class="row"><div class="col-sm-4 left"><label for="firstname">First Name:</label></div> <div class="col-sm-8"><input type="text" name="firstname" id="firstname"></div></div>
+            <div class="row"><div class="col-sm-4 left"><label for="lastname">Last Name:</label></div> <div class="col-sm-8"><input type="text" name="lastname" id="lastname"></div></div>
+            <div class="row"><div class="col-sm-4 left"><label for="email">Email:</label></div> <div class="col-sm-8"><input type="text" name="email" id="email"></div></div>
+            <div class="row"><div class="col-sm-4 left"><label for="password1">Password:</label></div> <div class="col-sm-8"><input type="password" name="password1" id="password1"></div></div>
+            <div class="row"><div class="col-sm-4 left"><label for="password">Repeat Password:</label></div> <div class="col-sm-8"><input type="password" name="password" id="password"></div></div>
+
+            <button id="signup-btn">Sign Up!</button>
         </form>
     </div>
 
 
 </main>
 
-<footer>
-    <div class="container">
-        &copy; MMXVI Marco Greselin
-    </div>
-</footer>
-
-
 <!-- jQuery first, then Bootstrap JS. -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.15.0/jquery.validate.min.js"></script>
+<script>
+    $(document).ready(function () {
+
+        $('#signup-form').validate({
+            rules: {
+                firstname: {
+                    required: true
+                }
+//                lastname: {
+//                    required: true
+//                },
+//                password: {
+//                    equalTo: '#password1'
+//                },
+//                email: {
+//                    required: true,
+//                    email: true
+//                }
+            },
+            messages: {
+                firstname: "Please enter your first name",
+                lastname: "Please enter your last name",
+                email: "Please enter your email",
+                password: "The passwords you entered don't match"
+            },
+            submitHandler: function () {
+                var firstname = $('#firstname').val();
+                var lastname = $('#lastname').val();
+                var email = $('#email').val();
+                var password = $('#password').val();
+                var dataString = 'firstname=' + firstname + '&lastname=' + lastname + '&email=' + email + '&password=' + password;
+                $.ajax({
+                    type: "POST",
+                    url: "../auth/signup",
+                    data: dataString,
+                    success: function (data) {
+                        $('body').html("<h2>demo created successfully!</h2>");
+                    },
+                    error: function (data) {
+                        $("body").html("<h2>"+data.responseText+"</h2>");
+                    }
+                })
+            }
+        })
+
+    });
+
+
+</script>
+
 </body>
 </html>
