--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -82,6 +82,13 @@ footer
   font-size: 1.5rem
   padding: 20px
   text-align: center
+  label.error
+      font-size: 10px
+      margin-bottom: 0px
+      margin-left: 17px
+      margin-top: 3px
+      display: block
+      position: absolute
   main
     border-radius: 3px
     max-width: 500px
@@ -91,6 +98,8 @@ footer
     padding-right: 70px
     padding-top: 30px
     padding-bottom: 30px
+  .row
+    height: 70px
   p
     display: block
   input
@@ -99,7 +108,10 @@ footer
     color: black
     margin-left: 10px
     padding-left: 8px
+  input.error
+    border: solid $logo-color
   button
+    margin-top: 15px
     border: 3px solid white
     border-radius: 4px
     color: white
@@ -126,6 +138,13 @@ footer
   font-size: 1.2rem
   padding: 20px
   text-align: center
+  label.error
+    font-size: 10px
+    margin-bottom: 0px
+    margin-left: 5px
+    margin-top: 3px
+    display: block
+    position: absolute
   .left
     text-align: right
   main
@@ -141,7 +160,7 @@ footer
     margin: 5px
     display: flex
     align-items: center
-    height: 50px
+    height: 57px
   .col-md-4
     padding: 0px
   input
@@ -150,14 +169,15 @@ footer
     color: black
     width: 100%
     padding-left: 5px
-
+  input.error
+    border: solid $logo-color
   button
     border: 3px solid white
     border-radius: 4px
     color: white
     background-color: transparent
     transition: background-color 0.1s ease
-    margin-top: 15px
+    margin-top: 20px
   button:hover
     background-color: white
     color: #000
