--- a/src/views/console/partials/header.ejs
+++ b/src/views/console/partials/header.ejs
@@ -14,7 +14,7 @@
 
             <ul class="right">
                 <li>Welcome Marco</li>
-                <li><a href="../">Logout</a></li>
+                <li><a href="../auth/logout">Logout</a></li>
             </ul>
         </nav>
     </div>
