--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -26,11 +26,11 @@
 
 <main>
 
-    <form>
+    <form id="login-form" method="post" action="../auth/login">
         <div class="container login-page">
-            <p><input type="text" placeholder="email"></p>
-            <p><input type="password" placeholder="password"></p>
-            <p><button type="submit" formaction="/console">Enter!</button></p>
+            <div class="row"><label for="email"></label><input type="text" placeholder="email" id="email" name="email"></div>
+            <div class="row"><label for="password"></label><input type="password" placeholder="password" id="password" name="password"></div>
+            <p><button id="login-btn">Enter!</button></p>
             <a href="/signup"><h6>Don't have an account?</h6></a>
         </div>
     </form>
@@ -47,5 +47,30 @@
 <!-- jQuery first, then Bootstrap JS. -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.15.0/jquery.validate.min.js"></script>
+<script>
+    $(document).ready(function () {
+
+        $('#login-form').validate({
+            rules: {
+                email: {
+                    required: true,
+                    email: true
+                },
+                password: {
+                    required: true
+                }
+            },
+            messages: {
+                email: "What's your email again?",
+                password: "Don't forget your password."
+            }
+        })
+
+    });
+
+
+</script>
+
 </body>
 </html>
