--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -98,6 +98,9 @@ footer
     padding-right: 70px
     padding-top: 30px
     padding-bottom: 30px
+  .err
+    color: $logo-color
+    font-size: 13px
   .row
     height: 70px
   p
