--- a/src/views/console/my-ads.ejs
+++ b/src/views/console/my-ads.ejs
@@ -34,11 +34,8 @@
 
 </main>
 
-<footer>
-    <div class="container">
-        &copy; MMXVI Marco Greselin
-    </div>
-</footer>
+<% include partials/footer.ejs %>
+
 
 
 <!-- jQuery first, then Bootstrap JS. -->
