--- a/src/views/console/partials/header.ejs
+++ b/src/views/console/partials/header.ejs
@@ -13,7 +13,7 @@
             </ul>
 
             <ul class="right">
-                <li>Welcome Marco</li>
+                <li>Welcome <%= locals.user %></li>
                 <li><a href="../auth/logout">Logout</a></li>
             </ul>
         </nav>
